apps/base/shlink/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: shlink
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:8-alpine
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: redis-data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: shlink
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
