apps/base/shlink/ingess.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: short
  namespace: short
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - short.bacherik.de
    secretName: short-tls
  rules:
  - host: "short.bacherik.de"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: short
            port:
              number: 80
